istio/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-all-ingress
  namespace: default # Mude se seu app estiver em outro namespace
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["istio-system"] # Permite tráfego vindo do Gateway que está no istio-system
